--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
 sha2 = "0.10"
+rand = "0.8"
