--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
+tfhe = { version = "*", features = ["boolean", "shortint", "integer", "seeder_unix"] }
 sha2 = "0.10"
 rand = "0.8"
 rayon = "1.10.0"
